--- a/index.html
+++ b/index.html
@@ -152,8 +152,9 @@
 					<div class="span4">
 						<p>Contact me at the following adderess</p>
 						<ul class="info">
-							<li><i class="icon-home"></i><span>E0-07, Depart of Physics,</span></li>
-							<li></i><span>Indian Institute of Science, Bengaluru-560012, Karnataka, India</span></li>
+							<li><i class="icon-home"></i><span>E0-07, Department of Physics,</span></li>
+							<li></i><span>Indian Institute of Science, C V Raman Road,</span></li>
+					                <li></i><span>Bengaluru-560012, Karnataka, India</span></li>
 							<li><i class="icon-phone"></i><span>+91-9735834873</span></li>
 							<li><i class="icon-envelope"></i><span>nilanjandev@iisc.ac.in</span></li>
 							<li><i class="icon-envelope"></i><span> nilanjandevbhaumik@gmail.com</span></li>
