--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<nav id="nav">
 				<!-- logo -->
 				<div class="logo">
-					<h2>Nilanjandev Bhaumik<span>PhD Student</span></h2>
+					<h2>Nilanjandev Bhaumik<span>PhD Student <span> Indian Institute of Science Bengaluru</span></h2>
 				</div>
 				<!-- /logo end -->
 				<!-- mainnav -->
