--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						<img class="img-circle" src="img/avater/nil.jpg" alt=""/>
 						<h2>Nilanjandev Bhaumik</h2>
 						<hr>
-						<h3> My research is primarily focused on exploring the broad areas of inflationary cosmology, probing this early stage of universe with the imprints from primordial black holes (PBH) and stochastic gravitational wave backgrounds (SGWB), along with the observational constraints from CMB probes such as Planck and BICEP. During my PhD, I have particularly worked on various aspects of PBHs formation from single field inflationary models, the induced SGWB originating from PBH forming models, and the detectable imprints of different reheating histories. We plan to study the imprints of various aspects reheating histories on the different contributions of GW backgrounds,  potentially extending the scope of our previous study. 
+						<h3> Hi, Welcome to my homepage. I am PhD student at Department of Physics, Indian Institute of Science, Bengaluru. My research is primarily focused on exploring the broad areas of inflationary cosmology, probing this early stage of universe with the imprints from primordial black holes (PBH) and stochastic gravitational wave backgrounds (SGWB), along with the observational constraints from CMB probes such as Planck and BICEP. During my PhD, I have particularly worked on various aspects of PBHs formation from single field inflationary models, the induced SGWB originating from PBH forming models, and the detectable imprints of different reheating histories. We plan to study the imprints of various aspects reheating histories on the different contributions of GW backgrounds,  potentially extending the scope of our previous study. 
 						</h3>
 						<hr>
 					</div>
