--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			<section id="personal" class="section mtcon">
 				<!-- heading -->
 				<div class="row">
-					<h2 class="mtcon-title">Works</h2>
+					<h2 class="mtcon-title"> Publications and Preprints</h2>
 					<div class="span8 short-dec">
 						<p></p>
 					</div>
@@ -152,7 +152,7 @@
 					<div class="span4">
 						<p>Contact me at the following adderess</p>
 						<ul class="info">
-							<li><i class="icon-home"></i><span>E0-07, Department of Physics,</span></li>
+							<li><i class="icon-home"></i><span>  E0-07, Department of Physics,</span></li>
 							<li></i><span>Indian Institute of Science, C V Raman Road,</span></li>
 					                <li></i><span>Bengaluru-560012, Karnataka, India</span></li>
 							<li><i class="icon-phone"></i><span>+91-9735834873</span></li>
