--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 <!--<![endif]-->
 <head>
 <meta charset="utf-8">
-<meta name="description" content="Lucas - Onepage Personal Uploads/Portfolio Template" />
-<meta name="keywords" content="Lucas - Onepage Personal Uploads/Portfolio Template"/>
 <meta name="author" content="Metrothenes" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 <title>Nilanjandev Bhaumik</title>
@@ -57,7 +55,7 @@
 			<nav id="nav">
 				<!-- logo -->
 				<div class="logo">
-					<h2>Nilanjandev Bhaumik<span>PhD Student <span> Indian Institute of Science Bengaluru</span></h2>
+					<h2>Nilanjandev Bhaumik<span>PhD Student <span> Indian Institute of Science, Bengaluru</span></h2>
 				</div>
 				<!-- /logo end -->
 				<!-- mainnav -->
@@ -150,7 +148,6 @@
 				
 				<div class="row contact">
 					<div class="span4">
-						<p>Contact me at the following adderess</p>
 						<ul class="info">
 							<li><i class="icon-home"></i><span>  E0-07, Department of Physics,</span></li>
 							<li></i><span>Indian Institute of Science, C V Raman Road,</span></li>
