--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<div class="nav-collapse">
 						<ul class="nav">
 							<li><a href="#intro"><i class="icon-fire"><span>Intro</span></i></a></li>
-							<li><a href="#personal"><i class="icon-book"><span>Works</span></i></a></li>
+							<li><a href="#personal"><i class="icon-book"><span>Publications and Preprints</span></i></a></li>
 							<li><a href="#contact"><i class="icon-envelope-alt"><span>Contact</span></i></a></li>
 							<li><a href="./cv.pdf"><i class="icon-suitcase"><span>Curriculum vitae</span></i></a></li>
 							
