--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
 					<div class="span4">
 						<div id="note"></div>
 						<form class="form" action="MAILTO:nilanjandevbhaumik@gmail.com" method="post" enctype="text/plain">
-						<input type="text" name="name" class="span4" placeholder="Name" required/>
-						<input type="text" class="span4" name="email" placeholder="Email" required/>
-						<textarea name="message" placeholder="Message" rows="8" class="span4"></textarea>
-						<button type="submit"  class="btn btn-success">SUBMIT</button>
+						<input type="text" name="name" class="span4" placeholder="Your Name" required/>
+						<input type="text" class="span4" name="email" placeholder=" Your Email" required/>
+						<textarea name="message" placeholder="Your Message" rows="8" class="span4"></textarea>
+						<button type="submit"  class="btn btn-success">Send</button>
 						</form>						
 					</div>
 				</div><!-- .contact end -->
