--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 							<li><a href="#personal"><i class="icon-book"><span>Publications</span></i></a></li>
 							<li><a href="#contact"><i class="icon-envelope-alt"><span>Contact</span></i></a></li>
 							<li><a href="./cv.pdf"><i class="icon-suitcase"><span>Curriculum vitae</span></i></a></li>
+							<li><a href="./css/pbh_jw.html"><i class="icon-suitcase"><span>Recently Published <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Papers on PBHs</span></i></a></li>
 							
 							
 						</ul>
