--- a/css/pbh_jw.html
+++ b/css/pbh_jw.html
@@ -31,30 +31,13 @@
 <span class="c2">::::::::</span>
 <span class="c4">
 <br><div>
-  <!--Add few elements to the form-->
-  <h1>Comments</h1>
-  <div>
-    <input type="text" id="txtName" placeholder="Enter your name" />
-  </div>
-  <div>
-    <input type="text" id="txtAge" placeholder="Enter your affiliation" />
-  </div>
-  <div>
-    <input type="text" id="txtEmail" placeholder="Enter your email address" />
-  </div>
-  <div>
-    <select id="selCountry">
-      <option selected value="">-- Choose the Keywords --</option>
-      <option value="PBHf">PBH formation</option>
-      <option value="PBHe">PBH evaporation</option>
-      <option value="PBHg">PBH induced GW</option>
-    </select>
-  </div>
-  <div>
-    <textarea id="msg" name="msg" placeholder="Write some message ..." style="height: 100px;"></textarea>
-  </div>
-  <div>
-    <input type="button" id="bt" value="Send the msg to page maintainer" onclick="saveFile()" />
+ <script src="https://utteranc.es/client.js"
+        repo="[ENTER REPO HERE]"
+        issue-term="url"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
   </div>
 </div></span>
 </p>
