--- a/css/pbh_jw.html
+++ b/css/pbh_jw.html
@@ -32,7 +32,7 @@
 <span class="c4">
 <br><div>
  <script src="https://utteranc.es/client.js"
-        repo="[ENTER REPO HERE]"
+        repo="ndb0.github.io"
         issue-term="url"
         theme="github-light"
         crossorigin="anonymous"
