--- a/css/pbh_jw.html
+++ b/css/pbh_jw.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <script src="../js/jwl.js"></script>
+<script src="../isc/jwl.js"></script>
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 <style type="text/css">@import url(https://themes.googleusercontent.com/fonts/css?kit=fpjTOVmNbO4Lz34iLyptLTi9jKYd1gJzj5O2gWsEpXol-nTHck7FFkZplK5meosG);ol{margin:0;padding:0}table td,table th{padding:0}.c6{padding-top:0pt;border-bottom-color:#4f81bd;border-bottom-width:1pt;padding-bottom:4pt;line-height:1.0;border-bottom-style:solid;orphans:2;widows:2;text-align:left}.c3{color:#17365d;font-weight:400;text-decoration:none;vertical-align:baseline;font-size:26pt;font-family:"Calibri";font-style:normal}.c1{color:#000000;font-weight:400;text-decoration:none;vertical-align:baseline;font-size:11pt;font-family:"Cambria";font-style:normal}.c0{padding-top:0pt;padding-bottom:10pt;line-height:1.1500000000000001;orphans:2;widows:2;text-align:left}.c7{background-color:#ffffff;max-width:432pt;padding:72pt 90pt 72pt 90pt}.c5{height:11pt}.c2{font-style:italic}.c4{font-weight:700}.title{padding-top:0pt;color:#17365d;border-bottom-color:#4f81bd;border-bottom-width:1pt;font-size:26pt;padding-bottom:4pt;font-family:"Calibri";line-height:1.0;border-bottom-style:solid;orphans:2;widows:2;text-align:left}.subtitle{padding-top:0pt;color:#4f81bd;font-size:12pt;padding-bottom:10pt;font-family:"Calibri";line-height:1.1500000000000001;font-style:italic;orphans:2;widows:2;text-align:left}li{color:#000000;font-size:11pt;font-family:"Cambria"}p{margin:0;color:#000000;font-size:11pt;font-family:"Cambria"}h1{padding-top:24pt;color:#366091;font-weight:700;font-size:14pt;padding-bottom:0pt;font-family:"Calibri";line-height:1.1500000000000001;page-break-after:avoid;orphans:2;widows:2;text-align:left}h2{padding-top:10pt;color:#4f81bd;font-weight:700;font-size:13pt;padding-bottom:0pt;font-family:"Calibri";line-height:1.1500000000000001;page-break-after:avoid;orphans:2;widows:2;text-align:left}h3{padding-top:10pt;color:#4f81bd;font-weight:700;font-size:11pt;padding-bottom:0pt;font-family:"Calibri";line-height:1.1500000000000001;page-break-after:avoid;orphans:2;widows:2;text-align:left}h4{padding-top:10pt;color:#4f81bd;font-weight:700;font-size:11pt;padding-bottom:0pt;font-family:"Calibri";line-height:1.1500000000000001;page-break-after:avoid;font-style:italic;orphans:2;widows:2;text-align:left}h5{padding-top:10pt;color:#243f61;font-size:11pt;padding-bottom:0pt;font-family:"Calibri";line-height:1.1500000000000001;page-break-after:avoid;orphans:2;widows:2;text-align:left}h6{padding-top:10pt;color:#243f61;font-size:11pt;padding-bottom:0pt;font-family:"Calibri";line-height:1.1500000000000001;page-break-after:avoid;font-style:italic;orphans:2;widows:2;text-align:left}</style>
 </head>
@@ -30,46 +31,32 @@
 <span>Keywords:</span>
 <span class="c2">::::::::</span>
 <span class="c4">
-<br><section>
-      <div id="light-mode">
-        <script src="https://utteranc.es/client.js"
-          repo="https://github.com/ndb0/ndb0.github.io"
-          issue-term="title"
-          theme="github-light"
-          crossorigin="anonymous"
-          async>
-        </script>
-      </div>
-
-      <div id="dark-mode">
-        <script src="https://utteranc.es/client.js"
-          repo="https://github.com/ndb0/ndb0.github.io"
-          issue-term="title"
-          theme="github-dark"
-          crossorigin="anonymous"
-          async>
-        </script>
-      </div>
-
-      <script>
-        var uttLight = document.getElementById("light-mode");
-        var uttDark = document.getElementById("dark-mode");
-
-        let initTheme = "light";
-        if ($("html[mode=dark]").length > 0
-          || ($("html[mode]").length == 0
-            && window.matchMedia("(prefers-color-scheme: dark)").matches ) ) {
-          initTheme = "dark";
-        }
-
-        if(initTheme === "dark"){
-          uttLight.parentNode.removeChild(uttLight);
-        } else {
-          uttDark.parentNode.removeChild(uttDark);
-        }
-      </script>
-    </section>
-
+<br><div>
+  <!--Add few elements to the form-->
+  <h1>Comments</h1>
+  <div>
+    <input type="text" id="txtName" placeholder="Enter your name" />
+  </div>
+  <div>
+    <input type="text" id="txtAge" placeholder="Enter your affiliation" />
+  </div>
+  <div>
+    <input type="text" id="txtEmail" placeholder="Enter your email address" />
+  </div>
+  <div>
+    <select id="selCountry">
+      <option selected value="">-- Choose the Keywords --</option>
+      <option value="PBHf">PBH formation</option>
+      <option value="PBHe">PBH evaporation</option>
+      <option value="PBHg">PBH induced GW</option>
+    </select>
+  </div>
+  <div>
+    <textarea id="msg" name="msg" placeholder="Write some message ..." style="height: 100px;"></textarea>
+  </div>
+  <div>
+    <input type="button" id="bt" value="Send the msg to page maintainer" onclick="saveFile2()" />
+  </div>
 </div></span>
 </p>
 <hr style="page-break-before:always;display:none;">
