--- a/css/pbh_jw.html
+++ b/css/pbh_jw.html
@@ -55,7 +55,7 @@
     <textarea id="msg" name="msg" placeholder="Write some message ..." style="height: 100px;"></textarea>
   </div>
   <div>
-    <input type="button" id="bt" value="Send the msg to page maintainer" onclick="saveFile2()" />
+    <input type="button" id="bt" value="Send the msg to page maintainer" onclick="saveFile()" />
   </div>
 </div></span>
 </p>
