--- a/css/PBH_93-2017.html
+++ b/css/PBH_93-2017.html
@@ -6,6 +6,23 @@
 </head>
 <body class="c7 doc-content">
 <h1 style="font-size:60px;">PBH papers published 1993-2018</h1>
+  <script src="https://giscus.app/client.js"
+        data-repo="ndb0/Page_data"
+        data-repo-id="R_kgDOJzzqrg"
+        data-category="General"
+        data-category-id="DIC_kwDOJzzqrs4CXdAy"
+        data-mapping="specific"
+        data-term="Paged_data"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="1"
+        data-input-position="top"
+        data-theme="light_tritanopia"
+        data-lang="en"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
 <p class="c2 title">
 <span class="c4">Uncertainties in primordial black-hole constraints on the primordial &nbsp; power spectrum</span>
 </p>
