--- a/index.html
+++ b/index.html
@@ -161,13 +161,24 @@
 						</ul>
 					</div>
 					<div class="span4">
-						<div id="note"></div>
-						<form class="form" action="MAILTO:nilanjandevbhaumik@gmail.com" method="post" enctype="text/plain">
-						<input type="text" name="name" class="span4" placeholder="Your Name" required/>
-						<input type="text" class="span4" name="email" placeholder=" Your Email" required/>
-						<textarea name="message" placeholder="Your Message For Me" rows="2" class="span4"></textarea>
-						<button type="submit"  class="btn btn-success">Send</button>
-						</form>						
+						<h2 style="font-size:20px;">Put your msg here for discussion : </h2>
+						<script src="https://giscus.app/client.js"
+						        data-repo="ndb0/Page_data"
+						        data-repo-id="R_kgDOJzzqrg"
+						        data-category="General"
+						        data-category-id="DIC_kwDOJzzqrs4CXdAy"
+						        data-mapping="specific"
+						        data-term="Paged_data"
+						        data-strict="0"
+						        data-reactions-enabled="1"
+						        data-emit-metadata="1"
+						        data-input-position="top"
+						        data-theme="light_tritanopia"
+						        data-lang="en"
+						        data-loading="lazy"
+						        crossorigin="anonymous"
+						        async>
+						</script>					
 					</div>
 				</div><!-- .contact end -->
 			</section>
