--- a/css/pbh_jw.html
+++ b/css/pbh_jw.html
@@ -18,8 +18,9 @@ MathJax = {
 </script>
 </head>
 <body class="c7 doc-content">
-<h1 style="font-size:60px; width:1500px;" >PBH papers published between 2018-present</h1>
-<h2 style="font-size:20px;">Put your public comments on PBHs here for discussion : </h2>
+<h1 style="font-size:60px; width:1500px; margin-left: 200px" >PBH papers published between 2018-present</h1>
+<h2 style="font-size:20px; margin-left: 200px">Put your public comments on PBHs here for discussion : </h2>
+<div style="margin-left: 200px;"  >
 <script src="https://giscus.app/client.js"
         data-repo="ndb0/Page_data"
         data-repo-id="R_kgDOJzzqrg"
@@ -37,6 +38,7 @@ MathJax = {
         crossorigin="anonymous"
         async>
 </script>
+</div>
 <section style="    padding: 20px;
                 width: 1000px;
                 line-height: 2em;  border:10px solid grey; margin-left: 200px;" >
