--- a/css/pbh_jw.html
+++ b/css/pbh_jw.html
@@ -19,8 +19,8 @@ MathJax = {
 </head>
 <body class="c7 doc-content">
 <h1 style="font-size:60px; width:1500px; margin-left: 200px" >PBH papers published between 2018-present</h1>
-<h2 style="font-size:20px; margin-left: 200px">Put your public comments on PBHs here for discussion : </h2>
-<div style="margin-left: 200px;"  >
+<h2 style="font-size:20px; width:1500px; margin-left: 200px">Put your public comments on PBHs here for discussion : </h2>
+<div style="margin-left: 200px; width:600px;"  >
 <script src="https://giscus.app/client.js"
         data-repo="ndb0/Page_data"
         data-repo-id="R_kgDOJzzqrg"
