--- a/css/pbh_jw.html
+++ b/css/pbh_jw.html
@@ -63,6 +63,7 @@ MathJax = {
 </p>
 <p class="c0">
 <span>Keywords: </span>
+<span> Comment :  Big claim is : n_s is consistent with CMB, which is possible in principle because they are looking with a particular E-$\alpha$ attractor model with certain fexibility, but I am not very sure if they are verifying their statement with full phased numerical analysis or semi slow-roll only exact background evolution kind of analysis.     </span>
 <span class="c2">::</span>
 <span class="c3">
 <br><div>
