--- a/css/pbh_jw.html
+++ b/css/pbh_jw.html
@@ -62,9 +62,9 @@ MathJax = {
 <span class="c1">Abstract: The E-type $\alpha$-attractor models of single-field inflation were generalized further in order to accommodate production of primordial black holes (PBH) via adding a near-inflection point to the inflaton scalar potential at smaller scales, in good agreement with measurements of the cosmic microwave background (CMB) radiation. A minimal number of new parameters was used but their fine-tuning was maximized in order to increase possible masses of PBH formed during an ultra-slow-roll phase leading to a large enhancement of the power spectrum of scalar (curvature) perturbations by 6 or 7 orders of magnitude against the power spectrum of perturbations observed in CMB. It was found that extreme fine-tuning of the parameters in our models can lead to a formation of Moon-size PBH with the masses of approximately $10^{26}$ g, still in agreement with CMB observations. Quantum corrections are known to lead to the perturbative upper bound on the amplitude of large scalar perturbations responsible for PBH production. The quantum (one-loop) corrections in our models were found to be suppressed by one order of magnitude for PBH with the masses of approximately $10^{19}$ g, which may form the whole dark matter in the Universe.</span>
 </p>
 <p class="c0">
-<span>Keywords: </span>
-<span> Comment :  Big claim is : n_s is consistent with CMB, which is possible in principle because they are looking with a particular E-$\alpha$ attractor model with certain fexibility, but I am not very sure if they are verifying their statement with full phased numerical analysis or semi slow-roll only exact background evolution kind of analysis.     </span>
-<span class="c2">::</span>
+<span>Keywords:<br> </span>
+<span> Comment :  Big claim is : n_s is consistent with CMB, which is possible in principle because they are looking with a particular E-$\alpha$ attractor model with certain fexibility, but I am not very sure if they are verifying their statement with full phased numerical analysis or semi slow-roll only exact background evolution kind of analysis.   </span>
+<span class="c2"> <br> ::</span>
 <span class="c3">
 <br><div>
   <!--Add few elements to the form-->
