--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<nav id="nav">
 				<!-- logo -->
 				<div class="logo">
-					<h2>Nilanjandev Bhaumik<span>Indian Institute of Science, Bengaluru</span></h2>
+					<h2>Nilanjandev Bhaumik<span>ICTP- Asia Pacific, Beijing</span></h2>
 				</div>
 				<!-- /logo end -->
 				<!-- mainnav -->
@@ -153,11 +153,10 @@
 				<div class="row contact">
 					<div class="span4">
 						<ul class="info">
-							<li><i class="icon-home"></i><span>  E0-07, Department of Physics,</span></li>
-							<li></i><span>Indian Institute of Science, C V Raman Road,</span></li>
-					                <li></i><span>Bengaluru-560012, Karnataka, India</span></li>
+							<li><i class="icon-home"></i><span>  Room no-205, Building 6</span></li>
+							<li></i><span>ICTP- Asia Pacific, Beijing,</span></li>
 							<li><i class="icon-phone"></i><span>+91-9735834873</span></li>
-							<li><i class="icon-envelope"></i><span>nilanjandev@iisc.ac.in</span></li>
+							<li><i class="icon-envelope"></i><span>nilanjandevbhaumik@ucas.ac.cn</span></li>
 							<li><i class="icon-envelope"></i><span> nilanjandevbhaumik@gmail.com</span></li>
 						</ul>
 					</div>
