--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<li><a href="#intro"><i class="icon-fire"><span>Intro</span></i></a></li>
 							<li><a href="#personal"><i class="icon-book"><span>Publications</span></i></a></li>
 							<li><a href="#contact"><i class="icon-envelope-alt"><span>Contact</span></i></a></li>
-							<li><a href="./cv.pdf"><i class="icon-suitcase"><span>Curriculum vitae</span></i></a></li>
+							<li><a href="./cv_ndb_no_ref.pdf"><i class="icon-suitcase"><span>Curriculum vitae</span></i></a></li>
 							<li><a href="./css/pbh_jw.html"><i class="icon-suitcase"><span> PBH papers (2018- )</span></i></a></li>
 							<li><a href="./css/PBH_93-2017.html"><i class="icon-suitcase"><span> PBH papers (93-18)</span></i></a></li>
 							<li><a href="https://mega.nz/folder/mhgzSCwb#haTIthRAsu6C4kfZdph5Sg"><i class="icon-suitcase"><span> Other papers</span></i></a></li>
